--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,12 @@
+cachetools==5.3.1
+chardet==5.2.0
+colorama==0.4.6
 contourpy==1.1.1
 coverage==7.3.1
 cycler==0.12.0
+distlib==0.3.7
 exceptiongroup==1.1.3
+filelock==3.12.4
 fonttools==4.43.0
 iniconfig==2.0.0
 kiwisolver==1.4.5
@@ -10,8 +15,10 @@ numpy==1.26.0
 packaging==23.1
 pathlib==1.0.1
 Pillow==10.0.1
+platformdirs==3.11.0
 pluggy==1.3.0
 pyparsing==3.1.1
+pyproject-api==1.6.1
 PyQt5==5.15.9
 PyQt5-Qt5==5.15.2
 PyQt5-sip==12.12.2
@@ -20,3 +27,5 @@ pytest-cov==4.1.0
 python-dateutil==2.8.2
 six==1.16.0
 tomli==2.0.1
+tox==4.11.3
+virtualenv==20.24.5
