Updated tox.ini with python version and requirements installation

--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,17 @@
 [tox]
-envlist = my_env
+envlist = test_service
 skipsdist = true
 
 [testenv]
-deps = pytest
-commands = pytest
+install_command = pip install {opts} {packages}
+basepython= python3.10
+
+[testenv: test_service]
+deps =
+    -rrequirements.txt
+
+setenv =
+    PYTHONPATH=.
+
+commands =
+    pytest
